--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,8 @@
         <azure.sdk.version>4.9.2</azure.sdk.version>
         <caffeine.version>2.9.3</caffeine.version>
         <cel-version>0.5.1</cel-version>
+        <google.api.client.version>2.4.0</google.api.client.version>
+        <google.auth.version>1.24.1</google.auth.version>
         <guice.version>5.1.0</guice.version>
         <jsonata-version>2.5.1</jsonata-version>
         <json-schema.version>1.14.5</json-schema.version>
@@ -324,6 +326,16 @@
                 <groupId>com.google.crypto.tink</groupId>
                 <artifactId>tink-gcpkms</artifactId>
                 <version>${tink.gcp.kms.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.api-client</groupId>
+                <artifactId>google-api-client</artifactId>
+                <version>${google.api.client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.auth</groupId>
+                <artifactId>google-auth-library-credentials</artifactId>
+                <version>${google.auth.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.projectnessie.cel</groupId>
