--- a/client-encryption-gcp/pom.xml
+++ b/client-encryption-gcp/pom.xml
@@ -51,6 +51,14 @@
             <groupId>com.google.crypto.tink</groupId>
             <artifactId>tink-gcpkms</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-credentials</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.confluent</groupId>
