--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
         <json-schema.version>1.14.5</json-schema.version>
         <json-skema.version>0.20.0</json-skema.version>
         <kcache.version>4.0.11</kcache.version>
+        <json-schema.version>1.14.6</json-schema.version>
         <proto-google-common-protos.version>2.22.1</proto-google-common-protos.version>
         <protoc.jar.maven.plugin.version>3.11.4</protoc.jar.maven.plugin.version>
         <okio.version>3.4.0</okio.version>
